# RootManage-Module-Model

./: .gitignore  BUILD.md  CHANGELOG.MD  CHANGELOG.md  GITHUB_ENV  Makefile  NDK_COMPILATION_GUIDE.md  README-Git-Android-Compilation.md  README.md  __main__.spec  boot-completed.sh  build.ps1  build.py  build.sh  compile_git_android.sh  module.prop  post-fs-data.sh  post-fs-data.sh.bak  post-mount.sh  proxy.toml  pyproject.toml  pytest.ini  rootAVD.bat  rootAVD.sh  sepolicy.rule  service.sh  system.prop  test.prompt.yml  test_ndk_compilation.sh  uninstall.sh  update.json
.github/workflows/: Delete old workflow runs.yml  Initial.yml  README.MD  RMM BUILD.yml  RMMBOX-CI.yml  build-all.yml  build-unified.yml  build.yml  config.yml  fs.yml  multi-platform-build.yml  multi-platform-python-build.yml  release my module.yml  static.yml  website-new.yml  website.yml
.rmmp/: shellcheck_details.json  shellcheck_report.txt
LICENCES/: README.MD
MyModule/: .gitignore  .gogogo  GITHUB.PROXYES  action.sh  boot-completed.sh  build.sh  customize.sh  go.mod  gogogo.env  gogogoproxy.go  gogogoproxy.sh  module.prop  post-fs-data.sh  post-mount.sh  readme.md  sepolicy.rule  service.sh  system.prop  test.sh  uninstall.sh
MyModule/GOBIN/: gogogorc-core  jq
MyModule/GOROOT/src/: all.bat  clean.bat  make.bat  race.bat  run.bat
MyModule/GOXBIN/: README.MD
MyModule/UniCron/: UniCron.cron
MyModule/example/: build_alllllllllll!!!!!!.sh  build_gogogo_from_src.sh
MyModule/gogogo/: go.mod  gogogo.go  readme.md
MyModule/src/: UniCrond  UniCrond.GO  UniCrond.go  go.mod  go.sum  main.go  readme.md  test.list
MyModule/src/gogogo/: go.mod  gogogo.go
MyModule/src/gogogorc/: gogogorc  gogogorc-core.go
MyModule/webroot/: index.html
RMM_BUILD/: build.toml
RMM_BUILD/mac/: README.MD
RMM_BUILD/postbuild/go/: go.mod
RMM_BUILD/postbuild/rs/: Cargo.toml
RMM_BUILD/prebuild/go/: go.mod
TE/: module.prop  update.json
TE/.rmmp/: Rmake.toml  shellcheck-fixes.diff  shellcheck.json  shellcheck.llms.txt
TE/.rmmp/source-build/: README.md
TEST/: CHANGELOG.md  README.MD  customize.sh  module.prop  rmmproject.toml  update.json
TEST/.rmmp/: Rmake.toml  shellcheck-fixes.diff  shellcheck.json  shellcheck.llms.txt  shellcheck_details.json  shellcheck_report.txt
TEST/.rmmp/source-build/: LICENSE  README.md  rmmproject.toml  update.json
TEST/system/etc/: example.conf
boot-img/ramdisk/: init.real  kernelsu.ko  ramdisk.cpio
docs/: completion.md
gogogo/: go.mod  go.sum  gogogo.go  iOS编译说明.md
gogogo.2/: go.sum  gogogo.go  test_input.txt
gogogo/commands/: environment.go  info.go  interactive.go  platform.go
gogogo/config/: config.go
gogogo/gobuild/: progress.go  single.go
gogogo/test/: main.go
gogogo/utils/: check.go  colors.go  file.go  find.go  interact.go  parse.go  platform.go  setup.go  types.go
gogogorc/: go.mod  gogogorc-core.go  gogogorc.sh  perf_test.go
modules/MagicSub/: info.json
modules/SystemlessShaker/: info.json
modules/example/: info.json
modules/gogogo/: info.json
my module/: post-fs-data.sh  service.sh
rmmbox/: README.MD  build_all.ps1  build_all.py  build_all.sh  extract_wheels.py
rmmbox/basic/: Cargo.toml  pyproject.toml
rmmbox/basic/src/: lib.rs
rmmbox/cli/: Cargo.toml  pyproject.toml
rmmbox/cli/src/: lib.rs  utils.rs
rmmbox/cli/src/commands/: build.rs  clean.rs  config.rs  init.rs  install.rs  mod.rs  publish.rs  run.rs  search.rs  sync.rs  test.rs
rmmbox/config/: Cargo.toml  pyproject.toml
rmmbox/config/src/: lib.rs
rmmbox/fs/: Cargo.toml  pyproject.toml
rmmbox/fs/src/: lib.rs
rmmbox/project/: Cargo.toml  pyproject.toml
rmmbox/project/src/: lib.rs
rmmp/: README.MD  customize.sh  module.prop  rmmproject.toml  update.json
rmmp/.rmmp/: shellcheck_details.json  shellcheck_report.txt
rust/: Cargo.toml  update.json
rust/src/: adb.rs  config.rs  github.rs  lib.rs  main.rs  proxy.rs  shellcheck.rs  utils.rs
rust/src/cmds/: mod.rs  rmmbox.rs
rust/src/cmds/init/: mod.rs
rust/src/cmds/run/: mod.rs
rust/src/cmds/sync/: mod.rs
rust/src/commands/: build.rs  check.rs  clean.rs  completion.rs  config.rs  device.rs  init.rs  mcp.rs  mod.rs  publish.rs  run.rs  sync.rs  test.rs
rust/src/commands/utils/: build_utils.rs  check_utils.rs  clean_utils.rs  completion_utils.rs  config_utils.rs  device_utils.rs  init_utils.rs  mod.rs  publish_utils.rs  run_utils.rs  shellcheck.rs  sync_utils.rs  utils.rs
rust/src/commands/utils/core/: adb.rs  common.rs  config.rs  executor.rs  manager.rs  mod.rs  package.rs  project.rs  rmake.rs
rust/src/core/: IMPLEMENTATION_SUMMARY.md  README.md  examples.rs  mod.rs  python_bindings.rs  rmm_core.rs  rmm_core_tests.rs
src/: build.sh
src/RMM/: __init__.py
src/gogogo/: gogogo.go  readme.md  test_input.txt
src/gogogorc/: README.MD  go.mod  gogogorc
src/pyrmm/: __about__.py  __init__.py  __init__.pyi  __main__.py  getproxy.py  models.py  publisher.py  rrmrs.cp312-win_amd64.pyd  rrmrs.cp313-win_amd64.pyd  types.py
src/pyrmm/ai/: get_changelog.py  resources.py  rmmcp.py
src/pyrmm/cli/: __init__.py  __init__.pyi  __main__.py  build.py  init.py  main.py  nb.py  publish.py  rmmcore.pyi  rmmr.cp312-win_amd64.pyd  rmmr.py  run.py  sync.py  tests.py
src/pyrmm/config/: README.MD  __init__.py  config.py
src/pyrmm/usr/: README.MD
src/pyrmm/utils/: proxy.py
test/: .gitignore  CHANGELOG.MD  LICENSE  README.MD  module.prop  rmmproject.toml
test-fs/: CHANGELOG.MD  LICENSE  README.MD  module.prop  rmmproject.toml
test-module/: customize.sh  module.prop  rmmproject.toml  update.json
test-rmmp/: README.MD  module.prop  rmmproject.toml  update.json
test-rmmp/.rmmp/: Rmake.toml  shellcheck_details.json  shellcheck_report.txt
test2/: README.MD  module.prop  rmmproject.toml  update.json
test2/.rmmp/: shellcheck_details.json  shellcheck_report.txt
tests/: test_cli.py
website/: bundle-simple.js  bundle.js  package-lock.json  package.json  vite.bundle.config.js
website/dist-single/: index.html
website/docs/: index.md
website/docs/.vitepress/: config.js
website/docs/guide/: init.md  (+8 more)
(+141 files in other folders)
