[project]
name = "pyrmm"
version = "0.1.8"
description = "Magisk/Apatch/Kernelsu模块的工具集"
readme = "README.MD"
authors = [
    { name = "LIghtJUNction", email = "LIghtJUNction.me@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.2.1",
    "pydantic>=2.11.5",
    "pygithub>=2.6.1",
    "toml>=0.10.2",
]

[project.scripts]
rmm = "pyrmm.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

