[package]
name = "rmm"
version = "0.2.5"
edition = "2021"
description = "High-performance CLI for Magisk/APatch/KernelSU module development"
license = "MIT"
homepage = "https://github.com/LIghtJUNction/RootManageModuleModel"
repository = "https://github.com/LIghtJUNction/RootManageModuleModel"

[lib]
name = "rmmcore"
crate-type = ["cdylib"]

[[bin]]
name = "rmm"
path = "src/main.rs"

[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module"] }
clap = { version = "4.0", features = ["derive"] }
clap_complete = "4.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
regex = "1.0"
reqwest = { version = "0.12.20", features = ["json"], default-features = false }
tokio = { version = "1.0", features = ["rt-multi-thread"] }
git2 = "0.20"
glob = "0.3"
zip = "4.0.0"
flate2 = "1.0"
tar = "0.4"
walkdir = "2.4"
adb_client = "2.1.13"
humantime = "2.1"

[build-dependencies]
pyo3-build-config = "0.25.0"

[dev-dependencies]
tempfile = "3.0"
