[package]
name = "rmm"
version = "0.3.4"
edition = "2024"
description = "高性能RMMP管理器"
license = "MIT"
homepage = "https://github.com/LIghtJUNction/RootManageModuleModel"
repository = "https://github.com/LIghtJUNction/RootManageModuleModel"

authors = ["LIghtJUNction <lightjuntion.me@gmail.com>"]


[lib]
name = "rmmcore"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module"] }
clap = { version = "4.5.40", features = ["derive"] }
clap_complete = "4.5.54"
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
chrono = { version = "0.4.41", features = ["serde"] }
serde_json = "1.0.140"
regex = "1.11.1"
reqwest = { version = "0.12.20", features = ["json"], default-features = false }
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
git2 = "0.20.2"
glob = "0.3.2"
zip = "4.0.0"
flate2 = "1.1.2"
tar = "0.4.44"
walkdir = "2.5.0"
humantime = "2.1.13"
colored =  "3"

[dev-dependencies]
tempfile = "3.14.0"

[profile.release]
lto = true
strip = true      
opt-level = 3
panic = "abort"

[profile.dev]
opt-level = 0
panic = "unwind"

[build-dependencies]
pyo3-build-config = "0.25.0"

