[package]
name = "config"
version = "0.1.0"
edition = "2021"
description = "Fast TOML-based configuration module for RMM (Root Manage Module Model) implemented in Rust"
license = "MIT"
homepage = "https://github.com/lightqaq/RootManageModuleModel"
repository = "https://github.com/lightqaq/RootManageModuleModel"
documentation = "https://github.com/lightqaq/RootManageModuleModel"
keywords = ["config", "toml", "rmm", "python-extension"]
categories = ["config", "development-tools"]
authors = ["lightqaq"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "config"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module"] }
toml = "0.8.23"
serde = { version = "1.0.219", features = ["derive"] }
dirs = "6.0.0"
serde_json = "1.0.140"

