[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "config"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
]
dynamic = ["version"]
[tool.maturin]
features = ["pyo3/extension-module"]
# 跨平台构建配置 - 纯Rust扩展模块，不需要Python源码
# python-source = "src"  # 注释掉，因为这是纯Rust扩展
# 支持多种Python版本
python-versions = ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
# 启用跨平台构建 - 使用cibuildwheel或手动指定目标
module-name = "config"
bindings = "pyo3"

