[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "fs"
requires-python = ">=3.9"  # 修改为支持多个Python版本
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[tool.maturin]
features = ["pyo3/extension-module"]
# 跨平台构建配置 - 纯Rust扩展模块，不需要Python源码
# python-source = "src"  # 注释掉，因为这是纯Rust扩展
# 支持多种Python版本
python-versions = ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
# 启用跨平台构建 - 使用cibuildwheel或手动指定目标
module-name = "fs"
bindings = "pyo3"

# 优化配置
[tool.maturin.build]
# 发布模式优化
release = true
# 启用LTO优化
lto = true
